environments/staging/go-http-server/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-server
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: go-http-server
